--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="css/responsive.css">
 	<!-- include the site color stylesheet -->
 	<link rel="stylesheet" href="css/color/color.css">
+	<meta name="facebook-domain-verification" content="9qualna12los9pvumricnrhqf29zts" />
 </head>
 <body>
 	<!-- Page Loader -->
